# twilio_integration

./: pyproject.toml  requirements.txt
twilio_integration/: hooks.py
twilio_integration/fixtures/: custom_field.json  property_setter.json
twilio_integration/overrides/: Sales_invoice.py  notification.py
twilio_integration/twilio_integration/doctype/whatsapp_message/: whatsapp_message.json  whatsapp_message.py
